--- a/styles/GearPreview.module.css
+++ b/styles/GearPreview.module.css
@@ -1,3 +1,5 @@
+
+@media screen and (min-width: 810px) { 
 .container {
     position: relative;
      display:flex;
@@ -76,6 +78,7 @@ pointer-events: none;
 }
 
 .text {
+  color: #eba4bfbd;
     background-color: var(--main-bg);
   background: linear-gradient(151deg, #eba4bfbd, #bf9de086),
     radial-gradient(circle at 40% 124%, rgb(255, 255, 255), rgba(136, 115, 185, 0.733)),
@@ -123,7 +126,7 @@ position: relative;
   box-shadow: 0 3px 10px rgba(26, 25, 25, 0.5), 0 2px 10px rgba(48, 32, 54, 0.5);
   cursor: pointer;
 }
-
+}
 /* mobile view */
 
 @media screen and (max-width: 810px) {
@@ -170,7 +173,7 @@ position: relative;
   background-position: center;
   opacity: 0.3;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   mix-blend-mode: lighten;
 pointer-events: none;
 filter: grayscale(0.5);
@@ -205,52 +208,11 @@ pointer-events: none;
 }
 
 .text {
-    background-color: var(--main-bg);
-  background: linear-gradient(151deg, #eba4bfbd, #bf9de086),
-    radial-gradient(circle at 40% 124%, rgb(255, 255, 255), rgba(136, 115, 185, 0.733)),
-    url(https://grainy-gradients.vercel.app/noise.svg);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #f3cbdabd;
   line-height: 1.4;
     grid-area: text;
     display: flex;
     align-items: center;
-  font-size: 1.3rem;
-}
-
-.btn {
-  padding: 2rem;
-  width: 20vw;
-position: relative;
-  color: rgb(255, 255, 255);
-  background-color: black;
-  border: 3px solid rgb(166, 78, 248);
-  border-radius: 50px;
-  font-family: inherit;
-  margin: 20px; mask-mode: unset;
-  transition: ease-in 0.2s;
-}
-
-.btn::after {
-    position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  content: ' ';
-  background-image: url('../public/assets/vhs01.gif');
-  border-radius: inherit;
-  background-size: cover;
-  background-repeat: repeat;
-  mix-blend-mode: difference;
-}
-
-.btn:hover{
-    transform: translateY(-3px);
-    background:rgb(158, 58, 252);
-  box-shadow: 0 3px 10px rgba(26, 25, 25, 0.5), 0 2px 10px rgba(48, 32, 54, 0.5);
-  cursor: pointer;
 }
 
 
