--- a/styles/MattPreview.module.css
+++ b/styles/MattPreview.module.css
@@ -23,13 +23,13 @@ mobile view */
 
 .imageWrapper::after {
   position: absolute;
-  height: 100%;
+  height: 50%;
   width: 100%;
   top: 0;
   left: 0;
   content: ' ';
   background-image: url('../public/assets/vhs01.gif');
-  opacity: 0.5;
+  opacity: 0.3;
   background-size: cover;
   background-repeat: repeat;
   mix-blend-mode: lighten;
@@ -43,22 +43,11 @@ mobile view */
 
 .imageWrapper::before {
   position: absolute;
-  height: 100%;
+  height: 0%;
   width: 100%;
   top: 0;
   left: 0;
   content: ' ';
-  background-image: url('../public/assets/vhs02.gif');
-  opacity: 0.5;
-  background-size: cover;
-  background-repeat: repeat;
-  mix-blend-mode: lighten;
-    mask-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 1) 55%,
-    rgba(0, 0, 0, 0.096) 60%,
-    rgba(0, 0, 0, 0.027) 98%,
-    transparent)
 }
 
 .image {
